--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "dotenv": "^16.4.7",
     "express": "^4.21.1",
-    "mongoose": "^8.11.0"
+    "mongoose": "^8.11.0",
+    "nodemailer": "^6.10.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
